style.css
video {
  cursor: url('cursors/smiski.cur'),default;
}

html {
  cursor: url('cursors/smiski.cur'),default;
}

#main-video {
    max-width: 90vw;
    max-height: 90vh;
    border-radius: 8px;
}

@media only screen and (min-width: 820px) {
  /* animate between cat1 and cat2 as the background */
  body {
    height: 70vh;
    width: 100vw;
    background-image: url("cat1.PNG");
    background-position: right bottom;
    background-repeat: repeat;
    background-size: 10% auto;
    background-color: rgb(33, 31, 34);
    margin: 0rem;
    overflow: auto;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    cursor: url('cursors/smiski.cur'), default;
    padding-top: 3.5rem;
    animation: catSwap 10s infinite alternate;
  }

  #main-video {
    max-width: 70vw;
    max-height: 70vh;
    border-radius: 8px;
    display: block;
    margin: 0 auto 2vmin auto;
  }
  
  body.menu-toggled > .meta-link > span {
    color: rgb(30, 30, 30);
  }
  
  #prt-link {
    bottom: 60px;
  }

  #art-link {
    bottom: 110px;
  }

  #rsvp-link {
    bottom: 160px;
  }

  #rsvp-link > i {
    color: #5a90f5;
  }
  
  #prt-link > i {
    color: #f78b8b;
  }
  
  #insta-link > i {
    color: #f78b8b;
  }

  #art-link > i {
    color: #f78b8b;
  }
  
  .meta-link {
    align-items: center;
    backdrop-filter: blur(50px);
    background-color: rgba(255, 255, 255, 0.05);
    border: 1px solid rgba(255, 255, 255, 0.1);
    border-radius: 6px;
    bottom: 10px;
    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
    cursor: pointer;  
    display: inline-flex;
    gap: 5px;
    left: 10px;
    padding: 10px 20px;
    position: fixed;
    text-decoration: none;
    transition: background-color 400ms, border-color 400ms;
    z-index: 10000;
    cursor: url('cursors/resizedCursor.png'),default;
  }
  
  .meta-link:hover {
    background-color: rgba(255, 255, 255, 0.1);
    border: 1px solid rgba(255, 255, 255, 0.2);
  }
  
  .meta-link > i, .meta-link > span {
    height: 20px;
    line-height: 20px;
  }
  
  .meta-link > span {
    color: white;
    font-family: "Rubik", sans-serif;
    font-weight: 500;
  }
}


@keyframes catSwap {
  0% {
    background-image: url("cat1.PNG");
  }
  50% {
    background-image: url("cat2.PNG");
  }
  100% {
    background-image: url("cat1.PNG");
  }
}

/* For Mobile */
@media only screen and (max-width: 819px) {
  body {
    height: 90vh;
    width: 100vw;
    background-image: url("cat1.PNG");
    background-position: right bottom;
    background-repeat: repeat;
    background-size: 30% auto;
    background-color: rgb(33, 31, 34);
    margin: 0rem;
    overflow: auto;
    cursor: url('cursors/smiski.cur'), default;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;
    padding-top: 3.5rem;
    animation: catSwap 10s infinite alternate;
  }

  #main-video {
    max-width: 92vw;
    width: 100%;
    height: 70vh;
    max-height: 70vh;
    object-fit: cover;
    display: block;
    margin: 0 auto 2vmin auto;
    border-radius: 10px;
  }

  body.menu-toggled > .meta-link > span {
    color: rgb(30, 30, 30);
  }
  
  #prt-link {
    bottom: 60px;
  }

  #art-link {
    bottom: 110px;
  }

  #rsvp-link {
    bottom: 160px;
  }

  #rsvp-link > i {
    color: #5a90f5;
  }
  
  #prt-link > i {
    color: #f78b8b;
  }

  #art-link > i {
    color: #f78b8b;
  }
  
  #insta-link > i {
    color: #f78b8b;
  }
  
  .meta-link {
    align-items: center;
    backdrop-filter: blur(50px);
    background-color: rgba(255, 255, 255, 0.05);
    border: 1px solid rgba(255, 255, 255, 0.1);
    border-radius: 6px;
    bottom: 10px;
    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
    cursor: pointer;  
    display: inline-flex;
    gap: 5px;
    left: 10px;
    padding: 10px 20px;
    position: fixed;
    text-decoration: none;
    transition: background-color 400ms, border-color 400ms;
    z-index: 10000;
    cursor: url('cursors/resizedCursor.png'),default;
  }
  
  .meta-link:hover {
    background-color: rgba(255, 255, 255, 0.1);
    border: 1px solid rgba(255, 255, 255, 0.2);
  }
  
  .meta-link > i, .meta-link > span, .meta-link > i {
    height: 20px;
    line-height: 20px;
  }
  
  .meta-link > span {
    color: white;
    font-family: "Rubik", sans-serif;
    font-weight: 500;
  }
}

